syntax = "proto3";
package movie;


option go_package = "movie/";



message Movie{
    bytes id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
    string director = 5;
    string duration = 6;
}

message CreateReq{
    Movie movie = 1;
}

message CreateRes{
    bool success = 1;
    Movie movie = 2;
    bytes id = 3;
}

message ReadReq{
    bytes id = 1;
}

message ReadRes{
    Movie movie = 1;
}

message DeleteReq{
    bytes id = 1;
}

message DeleteRes{
    bool success = 1;
}

message ReadAllReq{

}

message ReadAllRes{
    repeated Movie movie = 1;
}

service MovieService{
    rpc Create (CreateReq) returns (CreateRes);
    rpc Read (ReadReq) returns (ReadRes);
    rpc Delete (DeleteReq) returns (DeleteRes);
    rpc ReadAll (ReadAllReq) returns (ReadAllRes);
}